--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,7 @@ ul:not([class]) li:before {
 /* .header_middle */
 .header_middle {
   padding-top: 24px;
-  padding-bottom: 21px;
+  padding-bottom: 13px;
   font-size: 14px;
 }
 @media (max-width: 992px) {
@@ -328,7 +328,7 @@ ul:not([class]) li:before {
   display: grid;
   grid-template-columns: auto 1fr auto auto;
   align-items: center;
-  gap: 18px 0;
+  gap: 10px 0;
 }
 
 .header_logo {
@@ -556,7 +556,7 @@ ul:not([class]) li:before {
   position: absolute;
   z-index: 1;
   content: "";
-  top: 43px;
+  top: 51px;
   left: 50%;
   transform: translateX(-50%);
   width: 17px;
@@ -564,13 +564,23 @@ ul:not([class]) li:before {
   background-image: url(../img/menu/dropdown.svg);
   background-size: cover;
 }
+.main_menu__icon {
+  display: inline-flex;
+  filter: grayscale(100%) brightness(40%);
+}
+
 .main_menu__link {
+  padding-top: 8px;
+  padding-bottom: 8px;
   position: relative;
   z-index: 2;
   font-size: 16px;
   font-weight: 700;
   line-height: 18px;
   transition: color 0.25s;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 .active .main_menu__link {
   color: var(--color-accent);
@@ -623,6 +633,7 @@ ul:not([class]) li:before {
 .submenu__link {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   gap: 12px;
 }
 
@@ -946,7 +957,6 @@ ul:not([class]) li:before {
   font-size: 18px;
   font-weight: 700;
   line-height: 20px;
-  display: block;
 }
 .mobile_menu__box .main_menu__submenu_box {
   display: none;
